Change color scheme

--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -51,7 +51,9 @@ body.fixed-nav {
 
 .z-1 {
   z-index: 1; }
-
+.navbar-sidenav, .sidenav-second-level {
+  background: #46287c !important;
+}
 #mainNav .navbar-collapse {
   overflow: auto;
   max-height: 75vh; }
